		- New visual indication in several plot types that indicates the quantification status ('quant_stat' field) of a particular gene:condition. This information is useful to indicate whether or not
		to trust the expression values for a given gene under a specific condition, and may provide insight into outlier expression values.
			* This feature can be disabled by setting showStatus=F.
	
	Bugfixes:
		- Fixed bug in getGenes that may have resulted in long query lag for retrieving promoter diffData. As a result all calls to getGenes should be significanly faster.
		- CuffData fpkm argument 'features' now returns appropriate data.frame (includes previously un-reported data fields).
		- Replaced all instances of 'ln_fold_change' with the actual 'log2_fold_change'.  Values were previously log2 fold change but database headers were not updated to reflect this.
		- Fixed bug that could cause readCufflinks() to die with error when using reshape2::melt instead of reshape::melt.
	
	Notes:
		- ***The structure of the underlying database has changed in this version.  As a consequence, you must rebuild you cuffData.db file to use new version. readCufflinks(rebuild=T)***
		- Updated vignette
		- A 'fullnames' logical argument was added to fpkmMatrix. If True, rownames for fpkmMatrix will be a concatenation of gene_short_name and tracking_id.
		This has the added benefit of making row labels in csHeatmap easier to read, as well as preserving uniqueness. 
		- Slight speed improvements to JSdist (noticeable when using csCluster on large feature sets).
		- 'testTable' argument to getSig() has been dropped in lieu of new getSigTable() method.
	
v1.1.1
	Bugfixes:
		- fixed issue in which there was no graceful error handling of missing CDS or TSS data in cuffdiff output.
		- Fixed issue in which distribution test data (promoters, splicing, relCDS) were not appropriately added to objects on creation.