@@ -17,6 +17,7 @@ v1.1.3
 		- New visual indication in several plot types that indicates the quantification status ('quant_stat' field) of a particular gene:condition. This information is useful to indicate whether or not
 		to trust the expression values for a given gene under a specific condition, and may provide insight into outlier expression values.
 			* This feature can be disabled by setting showStatus=F.
+		- csDensity() is now available for CuffFeatureSet and CuffGeneSet objects
 	
 	Bugfixes:
 		- Fixed bug in getGenes that may have resulted in long query lag for retrieving promoter diffData. As a result all calls to getGenes should be significanly faster.
